FIX: removes -webkit-overflow-scrolling (#1135)
It causes more issues than it solves, a proper fix is probably much more involved as it will at least force to refactor msg-actions to be at the pane level instead of the message level.

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -327,7 +327,6 @@ $float-height: 530px;
     transition: scrollbar-color 0.2s ease-in-out;
     display: flex;
     flex-direction: column-reverse;
-    -webkit-overflow-scrolling: touch;
 
     &::-webkit-scrollbar {
       width: 15px;
